Fixed broken css.

--- a/glo.css
+++ b/glo.css
@@ -1,4 +1,3 @@
-
 body {
     color: black;
 }
@@ -12,7 +11,7 @@ th {
 }
 
 .failed {
-    color: dark-red;
+    color: darkred;
 }
 
 tr:nth-child(even) {
@@ -22,3 +21,4 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
     background: #FFF
 }
+
